--- a/src/components/GoBack.astro
+++ b/src/components/GoBack.astro
@@ -11,6 +11,46 @@ import {Icon} from "astro-icon/components";
     </a>
 </div>
 
+<style lang="scss">
+  @import "./../styles/GlobalStyling";
+
+  div {
+    padding-right: 0.5rem;
+    padding-bottom: 5rem;
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    display: none;
+    flex-direction: column;
+    justify-content: flex-end;
+    gap: 0.5rem;
+    z-index: 900;
+
+    @include min-width("l") {
+      display: none;
+    }
+
+    a {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 2rem;
+      height: 2rem;
+      cursor: pointer;
+      color: $color-gray-1;
+
+      [data-icon] {
+        font-size: 1.75rem;
+      }
+
+      &:hover {
+        color: $color-secondary;
+      }
+    }
+  }
+</style>
+
 <script>
 	const scrollToolBox = document.getElementById('scrollToolBox'); // Ensure you target the right element
 	const scrollTopButton = document.getElementById('scrollTopButton');
@@ -61,42 +101,3 @@ import {Icon} from "astro-icon/components";
 		})
 	}
 </script>
-
-<style lang="scss">
-  @import "./../styles/GlobalStyling";
-
-  div {
-    padding: $spacing-l; // Move this declaration above the nested rule
-    position: fixed;
-    top: 0;
-    right: 0;
-    height: 100vh;
-    display: none;
-    flex-direction: column;
-    justify-content: flex-end;
-    gap: 1rem;
-    z-index: 900;
-
-    @include min-width("l") {
-      display: none;
-    }
-
-    a {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 2rem;
-      height: 2rem;
-      cursor: pointer;
-      color: $color-gray-1;
-
-      [data-icon] {
-        font-size: 1.75rem;
-      }
-
-      &:hover {
-        color: $color-secondary;
-      }
-    }
-  }
-</style>
