--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Layout from "../layouts/multi.astro";
 import "@fontsource-variable/montserrat";
 import "@fontsource-variable/fira-code";
 import "@fontsource-variable/source-code-pro";
+import '@fontsource-variable/source-sans-3';
 import '@fontsource/source-sans-pro';
 import "@fontsource/roboto";
 import "./../styles/GlobalStyling.scss";
@@ -60,17 +61,57 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
   @import "./../styles/GlobalStyling";
 
   section {
-    height: 100vh;
+    min-height: 100vh;
     background-attachment: fixed;
-    background-position: 25%;
+    background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
-    scroll-margin-top: 30vh;
+    scroll-margin-top: 12vh;
     background-color: $color-white;
 
+    @include min-width("s") {
+      scroll-margin-top: 12vh;
+      background-position: 50% 50%;
+    }
+
+    @include min-width("m") {
+      scroll-margin-top: 12vh;
+      background-position: 25%;
+    }
+
+    @include min-width("l") {
+      scroll-margin-top: 30vh;
+      background-position: 25%;
+    }
+
+    @include min-width("xl") {
+      scroll-margin-top: 30vh;
+      background-position: 25%;
+    }
+
     article {
-      padding: 2.5vw 15vw;
+      padding: 3vh 5vw;
       background-color: $color-white;
+
+      @include min-width("s") {
+        padding: 3vh 5vw;
+        background-position: 0%;
+      }
+
+      @include min-width("m") {
+        padding: 5vh 10vw;
+        background-position: 45%;
+      }
+
+      @include min-width("l") {
+        padding: 5vh 15vw;
+        background-position: 45%;
+      }
+
+      @include min-width("xl") {
+        padding: 5vh 15vw;
+        background-position: 45%;
+      }
     }
 
     &.subcontent {
@@ -79,7 +120,6 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
 
       article {
         background-color: $color-white;
-
       }
     }
 
@@ -87,17 +127,49 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
       display: flex;
       justify-content: center;
       align-items: center;
-      background-position: 45%;
+      background-position: 50%;
+
+      @include min-width("s") {
+        background-position: 50%;
+      }
+
+      @include min-width("m") {
+        background-position: 45%;
+      }
+
+      @include min-width("l") {
+        background-position: 45%;
+      }
+
+      @include min-width("xl") {
+        background-position: 45%;
+      }
 
       article {
-        padding: 0 15vw 25vh;
+        padding: 1rem;
         background-color: unset;
 
         h1 {
-          font-size: 7rem !important;
+          font-size: 2rem;
           font-weight: 400;
           color: $color-white;
           text-align: center;
+
+          @include min-width("s") {
+            font-size: 2.75rem !important;
+          }
+
+          @include min-width("m") {
+            font-size: 4rem !important;
+          }
+
+          @include min-width("l") {
+            font-size: 5rem !important;
+          }
+
+          @include min-width("xl") {
+            font-size: 7rem !important;
+          }
         }
       }
     }
