--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -112,6 +112,19 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
         padding: 5vh 15vw;
         background-position: 45%;
       }
+
+      p {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+        img {
+
+          + img {
+            margin-top: 1rem;
+          }
+        }
+      }
     }
 
     &.subcontent {
