--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -114,14 +114,15 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
       }
 
       p {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
+        @include min-width("m") {
+          flex-direction: row;
+        }
 
         img {
+          padding: 1rem 2rem 1rem 0;
 
           + img {
-            margin-top: 1rem;
+            padding: 1rem 2rem 1rem 0;
           }
         }
       }
