--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,68 +61,64 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
   @import "./../styles/GlobalStyling";
 
   section {
-    min-height: 100vh;
+    min-height: calc(100vh + 50vh);
     background-attachment: fixed;
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
-    scroll-margin-top: 12vh;
+    scroll-margin-top: 8vh;
     background-color: $color-white;
 
     @include min-width("s") {
-      scroll-margin-top: 12vh;
       background-position: 50% 50%;
     }
 
     @include min-width("m") {
-      scroll-margin-top: 12vh;
       background-position: 25%;
     }
 
     @include min-width("l") {
-      scroll-margin-top: 30vh;
+      scroll-margin-top: 24vh;
       background-position: 25%;
     }
 
     @include min-width("xl") {
-      scroll-margin-top: 30vh;
       background-position: 25%;
     }
 
     article {
-      padding: 3vh 5vw;
+      padding: 2vh 5vw 3vh 5vw;
       background-color: $color-white;
 
       @include min-width("s") {
-        padding: 3vh 5vw;
+        padding: 2vh 5vw 3vh 5vw;
         background-position: 0%;
       }
 
       @include min-width("m") {
-        padding: 5vh 10vw;
+        padding: 4vh 10vw 5vh 10vw;
         background-position: 45%;
       }
 
       @include min-width("l") {
-        padding: 5vh 15vw;
+        padding: 4vh 15vw 5vh 15vw;
         background-position: 45%;
       }
 
       @include min-width("xl") {
-        padding: 5vh 15vw;
+        padding: 4vh 15vw 5vh 15vw;
         background-position: 45%;
       }
 
-      p {
-        @include min-width("m") {
-          flex-direction: row;
-        }
+      div.logo {
+        p {
+          display: flex;
+          flex-direction: column;
+          gap: 2rem;
+          padding: 1rem 0;
 
-        img {
-          padding: 1rem 2rem 1rem 0;
-
-          + img {
-            padding: 1rem 2rem 1rem 0;
+          @include min-width("m") {
+            flex-direction: row;
           }
         }
       }
@@ -191,5 +187,10 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
         }
       }
     }
+
+    &:last-child {
+      min-height: 100vh;
+    }
   }
+
 </style>
