--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -134,6 +134,7 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
     }
 
     &.introimage {
+      min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
