--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -114,6 +114,7 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
         p {
           display: flex;
           flex-direction: column;
+          justify-content: center;
           gap: 2rem;
           padding: 1rem 0;
 
