--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,11 +47,11 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
                               <Reviews/>
                           </article>
                       </section>
-                      <section class="subcontent">
+                      <!--<section class="subcontent">
                           <article>
                               Gallery
                           </article>
-                      </section>}
+                      </section>}-->
             </>
 		) : null;
 	})}
