--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -122,6 +122,7 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
     }
 
     &.subcontent {
+      min-height: 65vh;
       height: auto;
       background-color: $color-white;
 
