--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -112,7 +112,7 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
           flex-direction: column;
           justify-content: center;
           gap: 2rem;
-          padding: 1rem 0;
+          padding: 3rem 0 1rem 0;
 
           @include min-width("m") {
             flex-direction: row;
