--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -30,8 +30,8 @@ const year = date.getFullYear();
     </ul>
     <div>
         <p>Eckwerk Stuttgart</p>
-        <p>Stierlenstraße 25,</p>
-        <p>70327 Stuttgart,</p>
+        <p>Stierlenstraße 25</p>
+        <p>70327 Stuttgart</p>
         <p>Mail: <a href="mailto:hallo@eckwerkstuttgart.de">hallo@eckwerkstuttgart.de</a></p>
         <p>© {year} Eckwerk Stuttgart</p>
     </div>
