--- a/src/styles/GlobalStyling.scss
+++ b/src/styles/GlobalStyling.scss
@@ -19,6 +19,10 @@ h1, h2, h3, h4, h5, h6, p {
   margin-top: 0;
 }
 
+strong {
+  color: $color-gray-9;
+}
+
 hr {
   border-top: 1px solid $color-gray-6;
   margin: 4rem 0;
