--- a/src/components/Reviews.astro
+++ b/src/components/Reviews.astro
@@ -1,6 +1,17 @@
 ---
-const reviews = await fetchReviews();
-async function fetchReviews() {
+import {Icon} from "astro-icon/components";
+
+interface Review {
+	author_url: string;
+	author_name: string;
+	rating: number;
+	relative_time_description: string;
+	text: string;
+}
+
+const reviews: Review[] = await fetchReviews();
+
+async function fetchReviews(): Promise<Review[]> {
 	const API_KEY = 'AIzaSyAlDmSirID3ctmTbZn5-rJG6Z-ofXZCmws';
 	const PLACE_ID = 'ChIJ_erOoVuif6kRZSACbgSg1Ss';
 	const url = `https://maps.googleapis.com/maps/api/place/details/json?place_id=${PLACE_ID}&fields=reviews&language=de&key=${API_KEY}`;
@@ -15,7 +26,7 @@ async function fetchReviews() {
 	return data.result.reviews || [];
 }
 
-const renderStars = (rating: number) => {
+const renderStars = (rating: number): string => {
 	const fullStars = Math.floor(rating);
 	const halfStar = rating % 1 >= 0.5 ? 1 : 0;
 	const emptyStars = 5 - fullStars - halfStar;
@@ -23,112 +34,159 @@ const renderStars = (rating: number) => {
 };
 ---
 
-<div class='reviews'>
+<div class="reviews">
     <h1>Google Reviews</h1>
-    <div class='carousel'>
-        <div class='carousel-inner'>
-					{
-						// @ts-ignore
-
-						reviews.map((review) => (
-                    <div class='carousel-item'>
-                        <div class="item">
-                            <a href={review.author_url} target='_blank'>
-                                <h3>{review.author_name}</h3>
-                            </a>
-                            <div>
-                                <div class="stars">{renderStars(review.rating)}</div>
-                                <div>{review.relative_time_description}</div>
-                            </div>
-                            <p>{review.text}</p>
-                        </div>
-                    </div>
-						))
-					}
+    <div class="container">
+			{reviews.map((review, index) => (
+              <div class={`item ${index === 0 ? "active" : ""}`}>
+                  <div class="review">
+                      <a href={review.author_url} target="_blank">
+                          <h3>{review.author_name}</h3>
+                      </a>
+                      <div class="rating">
+                          <div class="stars">{renderStars(review.rating)}</div>
+                          <div>{review.relative_time_description}</div>
+                      </div>
+                      <p>{review.text}</p>
+                  </div>
+              </div>
+			))}
+        <div class="review-menu">
+            <button class="prev" id="prevButton">
+                <div class="icon">
+                    <Icon name='line-md:arrow-small-left'/>
+                </div>
+            </button>
+            <button class="next" id="nextButton">
+                <div class="icon">
+                    <Icon name='line-md:arrow-small-right'/>
+                </div>
+            </button>
         </div>
     </div>
 </div>
 
-<style>
-    .reviews {
-        display: flex;
-        flex-direction: column;
-        gap: 2rem;
+<style lang="scss">
+  @import './../styles/GlobalStyling';
 
-        .carousel {
-            width: 100%;
-            margin: auto;
-            overflow-y: scroll;
+  .reviews {
+    height: auto;
 
-            &::-webkit-scrollbar {
-                display: none;
-            }
+    .container {
+      position: relative;
+      margin: auto;
 
-            .carousel-inner {
-                display: flex;
-                transition: transform 0.5s ease;
+      .item {
+        display: none;
 
-                .carousel-item {
-                    min-width: 100%;
-                    box-sizing: border-box;
+        .review {
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+          padding: 2.5rem 0;
 
-                    &:last-child {
-                        padding-right: unset;
-                    }
-
-                    .item {
-                        display: flex;
-                        flex-direction: column;
-                        gap: 1rem;
-                        margin: 1rem;
-
-                        div {
-                            display: flex;
-                            gap: 1rem;
-
-                            .stars {
-                                color: gold;
-                            }
-                        }
-                    }
-                }
-            }
+          .rating {
+            display: flex;
+            gap: 1rem;
+          }
         }
+      }
     }
+  }
+
+  .review-menu {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+
+    button {
+      margin: unset;
+      padding: unset;
+    }
+  }
+
+
+  .prev, .next {
+    cursor: pointer;
+    transition: 0.6s ease;
+    background-color: unset;
+
+    .icon {
+      display: block;
+      color: $color-secondary;
+      background-color: $color-white;
+
+      [data-icon] {
+        font-size: 2rem;
+      }
+    }
+
+    &:hover {
+      .icon {
+        transition: 0.6s ease;
+      }
+    }
+
+  }
+
+  .next {
+    right: 0;
+  }
+
+  .ac tive {
+    display: block;
+  }
+
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+
+  @keyframes fade {
+    from {
+      opacity: .4
+    }
+    to {
+      opacity: 1
+    }
+  }
 </style>
 
 <script>
-	let currentIndex = 0;
+	let slideIndex = 1;
 
-	const showSlide = (index: number) => {
-		const slides = document.querySelectorAll('.carousel-item');
-		const totalSlides = slides.length;
+	const showSlides = (n: number) => {
+		let i;
+		const slides = document.getElementsByClassName("item");
 
-		if (totalSlides === 0) return;
-
-		currentIndex = (index + totalSlides) % totalSlides;
-		const offset = -currentIndex * 100;
-
-		const carouselInner = document.querySelector('.carousel-inner');
-		if (carouselInner) {
-			carouselInner.style.transform = `translateX(${offset}%)`;
+		if (n > slides.length) {
+			slideIndex = 1
 		}
 
-		slides.forEach((slide, i) => {
-			// @ts-ignore
-			slide.style.opacity = i === currentIndex ? '1' : '0';
-		});
+		if (n < 1) {
+			slideIndex = slides.length
+		}
+
+		for (i = 0; i < slides.length; i++) {
+			(slides[i] as HTMLElement).style.display = "none";
+		}
+		(slides[slideIndex - 1] as HTMLElement).style.display = "block";
 	};
 
-	const startAutoSlide = () => {
-		setInterval(() => {
-			currentIndex++;
-			showSlide(currentIndex);
-		}, 5000);
+	const plusSlides = (n: number) => {
+		showSlides(slideIndex += n);
 	};
 
 	document.addEventListener('DOMContentLoaded', () => {
-		showSlide(0);
-		startAutoSlide();
+		showSlides(slideIndex);
+
+		document.getElementById('prevButton')?.addEventListener('click', () => {
+			plusSlides(-1);
+		});
+
+		document.getElementById('nextButton')?.addEventListener('click', () => {
+			plusSlides(1);
+		});
 	});
 </script>
