--- a/src/components/Reviews.astro
+++ b/src/components/Reviews.astro
@@ -39,7 +39,7 @@ const renderStars = (rating: number): string => {
     <div class="container">
 			{reviews.map((review, index) => (
               <div class={`item ${index === 0 ? "active" : ""}`}>
-                  <div class="review">
+                  <div class="review fade">
                       <a href={review.author_url} target="_blank">
                           <h3>{review.author_name}</h3>
                       </a>
@@ -134,7 +134,7 @@ const renderStars = (rating: number): string => {
     right: 0;
   }
 
-  .ac tive {
+  .active {
     display: block;
   }
 
@@ -145,7 +145,7 @@ const renderStars = (rating: number): string => {
 
   @keyframes fade {
     from {
-      opacity: .4
+      opacity: 0
     }
     to {
       opacity: 1
