--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,9 @@ const {navigation} = Astro.props;
 ---
 
 <header>
-    <Icon name="logo"/>
+    <a href="https://eckwerkstuttgart.de/">
+        <Icon name="logo"/>
+    </a>
     <Navigation navigation={navigation} navigationPostion="header"/>
 </header>
 
