--- a/src/pages/impressum.astro
+++ b/src/pages/impressum.astro
@@ -8,7 +8,7 @@ import "@fontsource/roboto";
 import "./../styles/GlobalStyling.scss";
 
 const pages = await getCollection("pages");
-const page = pages.find(page => page.slug === "page-4-kontakt");
+const page = pages.find(page => page.slug === "page-5-impressum");
 let Content;
 if (page) {
 	const rendered = await page.render();
