--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import '@fontsource/source-sans-pro';
 import "@fontsource/roboto";
 import "./../styles/GlobalStyling.scss";
 import Reviews from "../components/Reviews.astro";
+import Carousel from "../components/Carousel.astro";
 
 const pages = await getCollection("pages");
 
@@ -33,7 +34,7 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
 		return originPage.data.mainStage === true ? (
             <>
                 <section class="content" id={originPage.data.title}
-                         style={originPage.data.title !== "Kontakt" ? `background-image: url('${image.default.src}'); @media (max-width: 768px) { background-image: url('/path/to/mobile-image.jpg'); }` : null}>
+                         style={originPage.data.title !== "Kontakt" ? `background-image: url('${image.default.src}');}` : null}>
                     <article>
                         <Content/>
                     </article>
@@ -41,11 +42,16 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
 
 
 							{index === 3 &&
-                      <section class="subcontent">
-                          <article>
-                              <Reviews/>
-                          </article>
-                      </section>
+                      <>
+                          <section class="subcontent">
+                              <article>
+                                  <Reviews/>
+                              </article>
+                          </section>
+                          <section class="carousel">
+                              <Carousel/>
+                          </section>
+                      </>
 							}
             </>
 		) : null;
@@ -56,29 +62,24 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
   @import "./../styles/GlobalStyling";
 
   section {
-    min-height: calc(100vh + 50vh);
+    min-height: calc(100vh + 30vh);
     background-attachment: fixed;
-    background-position: 50% 50%;
+    background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
     scroll-margin-top: 8vh;
     background-color: $color-white;
 
     @include min-width("s") {
-      background-position: 50% 50%;
+      background-position: 50%;
     }
 
     @include min-width("m") {
-      background-position: 25%;
+      background-position: 50%;
     }
 
     @include min-width("l") {
       scroll-margin-top: 24vh;
-      background-position: 25%;
-    }
-
-    @include min-width("xl") {
-      background-position: 25%;
     }
 
     article {
@@ -128,6 +129,11 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
       article {
         background-color: $color-white;
       }
+    }
+
+    &.carousel {
+      width: 100vw;
+      padding: unset;
     }
 
     &.introimage {
@@ -190,5 +196,4 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
       min-height: 100vh;
     }
   }
-
 </style>
