--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -1,54 +1,111 @@
 ---
-
+import type {ImageMetadata} from "astro";
+import {getImage, Image} from "astro:assets";
+const images = import.meta.glob<{ default: ImageMetadata }>("/src/assets/Albums/*/*");
+const imagePaths = Object.keys(images);
 ---
+
 <div class="carousel">
-    <button class="carousel-control prev" onclick="prevSlide()">&#10094;</button>
-    <button class="carousel-control next" onclick="nextSlide()">&#10095;</button>
+    <div class="carousel-inner">
+        <ul>
+					{
+						imagePaths.map(async (imagePath) => {
+							let image = images[imagePath]();
+							let optimizedImage = await getImage({
+								src: image,
+								width: 400,
+								height: 300
+							});
+
+							return (
+                      <li>
+                          <a
+                                  href={"#" + optimizedImage.src}
+                                  target="_blank"
+                                  class="group transition-all block"
+                          >
+                              <Image
+                                      src={image}
+                                      alt={"altText"}
+                                      width={400}
+                                      height={300}
+                              />
+                          </a>
+                      </li>
+							);
+						})
+					}
+        </ul>
+    </div>
 </div>
+
 
 <style>
     .carousel {
-        position: relative;
         width: 100%;
-        max-width: 600px;
-        margin: auto;
         overflow: hidden;
+
+        .carousel-inner {
+            display: flex;
+            width: max-content;
+            animation: bannermove 360s linear infinite;
+
+            & .break {
+                -webkit-animation-play-state: paused;
+                animation-play-state: paused;
+            }
+
+            ul {
+                display: flex;
+                list-style-type: none;
+                padding-left: 0;
+                margin: 0;
+
+                li {
+
+                    width: 400px;
+                    height: 300px;
+                    overflow: hidden;
+                    object-fit: cover;
+                    position: relative;
+                    margin-right: 10px;
+
+                    &:hover {
+                        cursor: pointer;
+                    }
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                    }
+                }
+            }
+        }
     }
 
-    .carousel-inner {
-        display: flex;
-        transition: transform 0.5s ease;
-    }
-
-    .carousel-item {
-        min-width: 100%;
-        box-sizing: border-box;
-    }
-
-    .carousel-item img {
-        width: 100%;
-        display: block;
-    }
-
-    .carousel-control {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: rgba(0, 0, 0, 0.5);
-        color: white;
-        border: none;
-        padding: 10px;
-        cursor: pointer;
-    }
-
-    .carousel-control.prev {
-        left: 10px;
-    }
-
-    .carousel-control.next {
-        right: 10px;
+    @keyframes bannermove {
+        0% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(-50%);
+        }
     }
 </style>
 
 <script>
+	// Add break class to stop the animation on hover on list item
+	const listItems = document.querySelectorAll('.carousel-inner ul li');
+	listItems.forEach((item) => {
+		item.addEventListener('mouseover', () => {
+			item.parentElement.classList.add('break');
+		});
+		item.addEventListener('mouseout', () => {
+			item.parentElement.classList.remove('break');
+		});
+	});
 </script>
