--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -1,6 +1,6 @@
 ---
 import type {ImageMetadata} from "astro";
-import {getImage, Image} from "astro:assets";
+import {Image} from "astro:assets";
 const images = import.meta.glob<{ default: ImageMetadata }>("/src/assets/Albums/*/*");
 const imagePaths = Object.keys(images);
 ---
@@ -11,22 +11,16 @@ const imagePaths = Object.keys(images);
 					{
 						imagePaths.map(async (imagePath) => {
 							let image = images[imagePath]();
-							let optimizedImage = await getImage({
-								src: image,
-								width: 400,
-								height: 300
-							});
-
 							return (
                       <li>
-
-                          <Image
-                                  src={image}
-                                  alt={"altText"}
-                                  width={400}
-                                  height={300}
-                          />
-
+                          <a>
+                              <Image
+                                      src={image}
+                                      alt={"altText"}
+                                      width={400}
+                                      height={300}
+                              />
+                          </a>
                       </li>
 							);
 						})
@@ -35,56 +29,85 @@ const imagePaths = Object.keys(images);
     </div>
 </div>
 
+<style lang="scss">
+  @import "./../styles/GlobalStyling";
 
-<style>
-    .carousel {
-        width: 100%;
-        overflow: hidden;
+  .carousel {
+    width: 100%;
+    overflow: hidden;
 
-        .carousel-inner {
-            display: flex;
-            width: max-content;
-            animation: bannermove 360s linear infinite;
+    .carousel-inner {
+      display: flex;
+      width: max-content;
+      animation: bannermove 360s linear infinite;
 
-            & .break {
-                -webkit-animation-play-state: paused;
-                animation-play-state: paused;
+      & .break {
+        -webkit-animation-play-state: paused;
+        animation-play-state: paused;
+      }
+
+      ul {
+        display: flex;
+        list-style-type: none;
+        padding-left: 0;
+        margin: 0;
+
+        li {
+
+          width: 400px;
+          height: 300px;
+          overflow: hidden;
+          object-fit: cover;
+          position: relative;
+          margin-right: 10px;
+
+          a {
+            padding: 2rem;
+            display: block;
+            width: 100%;
+            height: 100%;
+
+            &:hover {
+              cursor: pointer;
             }
+          }
 
-            ul {
-                display: flex;
-                list-style-type: none;
-                padding-left: 0;
-                margin: 0;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            position: absolute;
+            top: 0;
+            left: 0;
 
-                li {
-
-                    width: 400px;
-                    height: 300px;
-                    overflow: hidden;
-                    object-fit: cover;
-                    position: relative;
-                    margin-right: 10px;
-
-                    img {
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                    }
-                }
+            &:hover {
+              border: 0.25rem solid $color-secondary;
             }
+          }
         }
+      }
     }
+  }
 
-    @keyframes bannermove {
-        0% {
-            transform: translateX(0);
-        }
-        100% {
-            transform: translateX(-50%);
-        }
+  @keyframes bannermove {
+    0% {
+      transform: translateX(0);
     }
+    100% {
+      transform: translateX(-50%);
+    }
+  }
 </style>
+
+<script>
+	document.addEventListener('DOMContentLoaded', () => {
+		const images = document.querySelectorAll('.carousel-inner img');
+		const modal = document.getElementById('galleryModal');
+
+		images.forEach(image => {
+			image.addEventListener('click', () => {
+				modal?.classList.add('active');
+			});
+		});
+	});
+</script>
