--- a/src/layouts/multi.astro
+++ b/src/layouts/multi.astro
@@ -4,6 +4,7 @@ import type {INavigation} from "../types/navigation";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import GoBack from "../components/GoBack.astro";
+import GalleryModal from "../components/GalleryModal.astro";
 
 interface Props {
 	title: string;
@@ -50,6 +51,7 @@ const navigationFooter = navigation.filter((nav) =>
 </main>
 <GoBack/>
 <Footer navigation={navigationFooter}/>
+<GalleryModal/>
 </body>
 </html>
 
