remove zoom attr on gallery

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -62,6 +62,7 @@ const imagePaths = Object.keys(images).filter((imagePath) => {
 		closeSVG: closeSVGString,
 		gallery: "#gallery",
 		children: "a",
+		zoom: false,
 		wheelToZoom: false,
 		showHideOpacity: false,
 		counter: false,
