Fix images on carousel and gallery

--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -1,8 +1,17 @@
 ---
 import type {ImageMetadata} from "astro";
 import {Image} from "astro:assets";
+
+const shuffleArray = (array: string[]): string[] => {
+	for (let i = array.length - 1; i > 0; i--) {
+		const j = Math.floor(Math.random() * (i + 1));
+		[array[i], array[j]] = [array[j], array[i]];
+	}
+	return array;
+}
+
 const images = import.meta.glob<{ default: ImageMetadata }>("/src/assets/Albums/*/*");
-const imagePaths = Object.keys(images);
+const imagePaths = shuffleArray(Object.keys(images));
 ---
 
 <div class="carousel">
