--- a/src/layouts/single.astro
+++ b/src/layouts/single.astro
@@ -4,6 +4,7 @@ import type {INavigation} from "../types/navigation";
 import GoBack from "../components/GoBack.astro";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
+import {GoogleTagmanager} from "@digi4care/astro-google-tagmanager";
 
 interface Props {
 	title: string;
@@ -40,6 +41,8 @@ const navigationFooter = navigation.filter((nav) =>
     <meta name="generator" content={Astro.generator}/>
     <link rel="icon" type="image/svg+xml" href="/favicon-mode-dark.svg"/>
     <title>{title}</title>
+    <GoogleTagmanager id="GTM-TMM9XNTK" domain="https://eckwerkstuttgart.de/"
+                      container="custom-container.js"/>
 </head>
 <body>
 <Header navigation={navigationHeader}/>
