--- a/src/layouts/multi.astro
+++ b/src/layouts/multi.astro
@@ -5,7 +5,7 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import GoBack from "../components/GoBack.astro";
 import GalleryModal from "../components/GalleryModal.astro";
-import {GoogleTagmanager} from "@digi4care/astro-google-tagmanager";
+import {GoogleTagmanager, SiteVerification} from "@digi4care/astro-google-tagmanager";
 
 interface Props {
 	title: string;
@@ -44,6 +44,9 @@ const navigationFooter = navigation.filter((nav) =>
     <link rel="icon" type="image/svg+xml" href="/favicon-mode-dark.svg"/>
     <base href={import.meta.env.BASE_URL}/>
     <title>{title}</title>
+    <SiteVerification id="8lL0JpE_6JXew9d2GzHXJXZCammo2euC0iLFXp2Y"/>
+    <GoogleTagmanager id="GTM_MEASUREMENT_ID" domain="https://www.some-custom-domain.com"
+                      container="custom-container.js"/>
     <GoogleTagmanager id="GTM-TMM9XNTK" domain="https://eckwerkstuttgart.de/"
                       container="custom-container.js"/>
 </head>
