--- a/src/layouts/single.astro
+++ b/src/layouts/single.astro
@@ -46,6 +46,7 @@ const navigationFooter = navigation.filter((nav) =>
                       container="custom-container.js"/>
 </head>
 <body>
+<GoogleTagmanager id="GTM-TMM9XNTK" domain="https://eckwerkstuttgart.de/"/>
 <Header navigation={navigationHeader}/>
 <slot/>
 <GoBack/>
