--- a/src/layouts/multi.astro
+++ b/src/layouts/multi.astro
@@ -45,12 +45,11 @@ const navigationFooter = navigation.filter((nav) =>
     <base href={import.meta.env.BASE_URL}/>
     <title>{title}</title>
     <SiteVerification id="8lL0JpE_6JXew9d2GzHXJXZCammo2euC0iLFXp2Y"/>
-    <GoogleTagmanager id="GTM_MEASUREMENT_ID" domain="https://www.some-custom-domain.com"
-                      container="custom-container.js"/>
     <GoogleTagmanager id="GTM-TMM9XNTK" domain="https://eckwerkstuttgart.de/"
                       container="custom-container.js"/>
 </head>
 <body>
+<GoogleTagmanager id="GTM-TMM9XNTK" domain="https://eckwerkstuttgart.de/"/>
 <Header navigation={navigationHeader}/>
 <main>
     <slot/>
